feat(updates): added docker, overrides, and sort functionality
feat: added docker

fix: added overrides

fix: added name on import

feat(sort): added sort by set num

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 .env
-.vscode
+.vscode/*
+!.vscode/launch.json
 Lorcana
 SoulMasters
 SoulMastersSim
 vendor
+HostFiles/
 SWUDeck/concat
 SWUDeck/crops
 SWUDeck/Games
