Enforce stats submission API Keys

--- a/APIKeys/APIKeys.php.template
+++ b/APIKeys/APIKeys.php.template
@@ -17,3 +17,6 @@ $fabDBSecret = "op://$APP_ENV/FabDB/secret";
 // Patreon
 $patreonClientID = "op://$APP_ENV/Patreon/username";
 $patreonClientSecret = "op://$APP_ENV/Patreon/credential";
+
+$petranakiAPIKey = "";
+$karabastAPIKey = "";
