Validate oauth tokens

--- a/APIKeys/APIKeys.php.template
+++ b/APIKeys/APIKeys.php.template
@@ -20,3 +20,5 @@ $patreonClientSecret = "op://$APP_ENV/Patreon/credential";
 
 $petranakiAPIKey = "";
 $karabastAPIKey = "";
+
+$isProduction = false;
