Change price loading to be cached server side

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ SWUCardList/NextTurnRender.php
 SWUCardList/ZoneAccessors.php
 SWUCardList/ZoneClasses.php
 SWUCardList/Games
+SWUDeck/cache/price_cache.json
